--- a/docs/main.tex
+++ b/docs/main.tex
@@ -108,8 +108,7 @@ In the research phase, five research hypotheses (H1–H5) were formulated concer
 \input{tex/3-przeglad-narzedzi}
 \input{tex/4-projekt-eksperymentow}
 \input{tex/5-wyniki-eksperymentow}
-% TODO: \input{tex/6-system-paas}
-% TODO: \input{tex/7-wnioski}
+% TODO: \input{tex/6-wnioski}
 
 %---------------
 % Bibliografia
@@ -262,9 +261,37 @@ BEFORE submitting your final JSON output, verify:
 
 \end{minted}
 
-\appendix{TODO Zbiór repozytoriów testowych do H1}
-\label{att:dataset}
+\appendix{Zbiór repozytoriów testowych do H1}
+\label{att:h1-dataset}
 
-TODO
+W tabeli przedstawiono 25 repozytoriów wykorzystanych w eksperymentach H1.
+
+\begin{tabular}{r l}
+1 & \url{https://github.com/sankeer28/Math-PDF-Generator-Web.git} \\
+2 & \url{https://github.com/patrick204nqh/simple-webapp.git} \\
+3 & \url{https://github.com/IamLRBA/Banner-Designer-WebApp.git} \\
+4 & \url{https://github.com/jan-bobrowski/lsfont.git} \\
+5 & \url{https://github.com/SoLiDinity/airwatch.git} \\
+6 & \url{https://github.com/cgize/DiceOpt_kcd2.git} \\
+7 & \url{https://github.com/SchoolTimer/ParklandSchoolTimer.git} \\
+8 & \url{https://github.com/Mohit-Nathrani/Realtime-Chatting-WebApp.git} \\
+9 & \url{https://github.com/tschoffelen/csv-hero} \\
+10 & \url{https://github.com/isixe/MetaThief} \\
+11 & \url{https://github.com/xixu-me/DeepLX-App} \\
+12 & \url{https://github.com/rafuwu/mtg-scryfall-randomizer} \\
+13 & \url{https://github.com/hsalvesen/vesen} \\
+14 & \url{https://github.com/AdaptChat/webclient.git} \\
+15 & \url{https://github.com/prathmesh-ka-github/Chessable} \\
+16 & \url{https://github.com/MindlessTruffle/Class-Order-Checker} \\
+17 & \url{https://github.com/isixe/AdSenseDetective.git} \\
+18 & \url{https://github.com/robweber/mario-kart-tournament} \\
+19 & \url{https://github.com/york9675/Tempo-Sync} \\
+20 & \url{https://github.com/bhavish00007/Attendence-Calculator} \\
+21 & \url{https://github.com/9582anupam/scheme-seva.git} \\
+22 & \url{https://github.com/efsavage/hello-world-war} \\
+23 & \url{https://github.com/FullStackWithLawrence/openai-hello-world} \\
+24 & \url{https://github.com/angelvicenteg/ToDo-List} \\
+25 & \url{https://github.com/mmumshad/simple-webapp-flask} \\
+\end{tabular}
 
 \end{document} % Dobranoc.
