--- a/docs/tex/2-przeglad-literatury.tex
+++ b/docs/tex/2-przeglad-literatury.tex
@@ -5,7 +5,7 @@
 
 Podejście Infrastructure as Code polega na zarządzaniu infrastrukturą IT poprzez definiowanie jej konfiguracji w postaci czytelnego dla maszyny kodu. Zapewnia to automatyzację, spójność środowisk, kontrolę wersji oraz skalowalność zarządzania infrastrukturą. Tworzenie i utrzymanie takiej infrastruktury bywa jednak wymagające, stąd coraz większe zainteresowanie automatyzacją tych zadań z użyciem AI. Duże modele językowe, trenowane na ogromnych zbiorach danych tekstowych i kodu, wykazały zdolność do generowania i rozumienia kodu, co czyni je obiecującym narzędziem do automatycznego tworzenia konfiguracji IaC. W ostatnich latach pojawiło się wiele prac badających zastosowanie LLM do różnych platform i języków IaC. Srivatsa i in. (2024) \cite{srivatsa_survey_2024} przedstawili przekrojowe spojrzenie na ten temat w swojej pracy przeglądowej, podkreślając, że automatyzacja IaC za pomocą LLM może zredukować nakład pracy ludzkiej i błędy, jeśli uda się odpowiednio ukierunkować model. W pracy tej omówiono również wyzwania stojące przed takimi rozwiązaniami oraz perspektywy dalszych badań.
 
-Aktualne badania integrujące LLM z narzędziami chmurowymi pokazują obiecujące rezultaty, choć są to dopiero początki. Lanciano i in. (2023) \cite{lanciano_analyzing_2023} zaproponowali wyspecjalizowany model analizujący pliki wdrożeniowe Kubernetes, aby wspomóc mniej doświadczonych użytkowników w projektowaniu konfiguracji i zapewnieniu ich jakości. Z kolei Xu i in. (2023) \cite{ueno_migrating_2024} wprowadzili benchmark CloudEval-YAML do oceny zdolności LLM w generowaniu konfiguracji aplikacji cloud-native (w formacie YAML), udostępniając zestaw testów jednostkowych do weryfikacji poprawności wygenerowanych manifestów. Inni badacze sugerują zastosowanie LLM również do automatycznego monitorowania i utrzymania systemów – np. Malul i in. (2024) \cite{malul_genkubesec_2024} zaproponowali pipeline wykorzystujący LLM do detekcji anomalii i autoremediacji w środowisku Kubernetes, w celu zwiększenia stabilności systemu. Podejścia te często bazują na trenowaniu dedykowanych modeli językowych dopasowanych do domeny konfiguracji (np. z użyciem specjalistycznych korpusów danych). Alternatywą dla kosztownego trenowania od podstaw jest wykorzystanie istniejących, ogólnych modeli (GPT-3.5, GPT-4, Llama2 itp.) i dostrajanie \cite{liu_pre-train_2023} ich za pomocą odpowiednich promptów (instrukcji dla modelu) \cite{kratzke_dont_2024}. Niniejsza praca wpisuje się w ten nurt – badano, jak standardowe modele językowe mogą być wykorzystane (bez dodatkowego trenowania) do generowania plików Dockerfile i manifestów Kubernetes zgodnych z wymaganiami DevOps, poprzez odpowiednie techniki inżynierii promptów.
+Aktualne badania integrujące LLM z narzędziami chmurowymi pokazują obiecujące rezultaty, choć są to dopiero początki. Lanciano i in. (2023) \cite{lanciano_analyzing_2023} zaproponowali wyspecjalizowany model analizujący pliki wdrożeniowe Kubernetes, aby wspomóc mniej doświadczonych użytkowników w projektowaniu konfiguracji i zapewnieniu ich jakości. Z kolei Xu i in. (2023) \cite{xu_cloudeval-yaml_2023} wprowadzili benchmark CloudEval-YAML do oceny zdolności LLM w generowaniu konfiguracji aplikacji cloud-native (w formacie YAML), udostępniając zestaw testów jednostkowych do weryfikacji poprawności wygenerowanych manifestów. Inni badacze sugerują zastosowanie LLM również do automatycznego monitorowania i utrzymania systemów – np. Malul i in. (2024) \cite{malul_genkubesec_2024} zaproponowali pipeline wykorzystujący LLM do detekcji anomalii i autoremediacji w środowisku Kubernetes, w celu zwiększenia stabilności systemu. Podejścia te często bazują na trenowaniu dedykowanych modeli językowych dopasowanych do domeny konfiguracji (np. z użyciem specjalistycznych korpusów danych). Alternatywą dla kosztownego trenowania od podstaw jest wykorzystanie istniejących, ogólnych modeli (GPT-3.5, GPT-4, Llama2 itp.) i dostrajanie \cite{liu_pre-train_2023} ich za pomocą odpowiednich promptów (instrukcji dla modelu) \cite{kratzke_dont_2024}. Niniejsza praca wpisuje się w ten nurt – badano, jak standardowe modele językowe mogą być wykorzystane (bez dodatkowego trenowania) do generowania plików Dockerfile i manifestów Kubernetes zgodnych z wymaganiami DevOps, poprzez odpowiednie techniki inżynierii promptów.
 
 Ważnym kierunkiem rozwoju są również benchmarki oceny jakości konfiguracji IaC generowanych przez modele językowe. Kon i in. zaprezentowali benchmark IaC-Eval, który służy do systematycznej oceny jakości konfiguracji dla usług chmurowych AWS \cite{kon_iac-eval_nodate}. Narzędzie to umożliwia bardziej obiektywną ocenę możliwości modeli językowych w kontekście generowania poprawnych, zgodnych z intencją użytkownika konfiguracji.
 
